# etrade-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  README.md  models.py  oauth_web_server.py  pyproject.toml  repository.py  server.py
tests/: assertions.py  conftest.py  test_oauth_web_server.py  test_server.py
tests/repository/: conftest.py  test_accounts.py  test_authentication.py  test_initialization.py  test_portfolios.py  test_quotes.py  test_tokens.py  test_utilities.py
